--- a/app.json
+++ b/app.json
@@ -28,7 +28,7 @@
       "versionCode": 1,
       "config": {
         "googleMaps": {
-          "apiKey": "AIzaSyC_v_WdzSRNbuOIvf_-bBjWpgbfxbg-vQc"
+          "apiKey": ""
         }
       }
     }
